# mcp_py_sse_browser_control

./: .gitignore  README.md  browser_page.html  browser_server.py  pyproject.toml  web_server.py
