[project]
name = "mcp-py-sse-browser-control"
version = "0.1.0"
description = "A minimal Python-based MCP server that hosts a web page with SSE connection"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.3.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "sse-starlette>=2.0.0",
    "httpx>=0.28.1",
    "pydantic>=2.10.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["browser_mcp_server"]
